operations-k8s-prod/microservices/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: production ##TODO: change as per env
  name: notejam-prod
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: notejam-prod
  replicas: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: notejam-prod
    spec:
      serviceAccountName: ascp-csi-secrets-store-provider-aws
      containers:
      - image: 003767002475.dkr.ecr.eu-west-1.amazonaws.com/notejam-prod-ecr-registry:2022.05.09.main-61a8fbe5-2293473837 #{"$imagepolicy": "flux-system:notejam-prod-app"}
        imagePullPolicy: Always
        name: notejam-prod
        command: ["/bin/sh", "-c"]
        args: ["python manage.py syncdb --noinput && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
        ports:
        - containerPort: 80
        volumeMounts:
        - name: app-secrets
          mountPath: "/mnt/secrets"
          readOnly: true
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
      volumes:
      - name: app-secrets
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: notejam-deployment-spc-k8s-secrets
---
apiVersion: v1
kind: Service
metadata:
  namespace: prod
  name: notejam-prod-service
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: notejam-prod
