operations-k8s-prod/microservices/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-notejam-ingress
  namespace: production
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: "public"
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "false"
    alb.ingress.kubernetes.io/security-groups: "NoteJam-Alb-SG-prod"

spec:
  ingressClassName: public
  rules:
    - host: "prod-notejam.aqazi.xyz" 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notejam-prod-service
                port:
                  number: 80
